--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Hello World!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="bluestyle.css">
+  <link rel="stylesheet" href="css/bluestyle.css">
 </head>
 <body>
 
